--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-npm rNODE_ENV=test
+NODE_ENV=test
 APP_BASE_URL=http://localhost:1450
 APP_REDIRECT_URI=/account-validate
 APP_KEY=9-gIvZy9IbX5DD-aky_jQ3lQJVqHtS6F
